# abstraction-patterns

./: CHANGELOG.md  README.md  abstraction-patterns.cabal
src/: AbstractionPatterns.hs
