cabal-version:      2.4
name:               abstraction-patterns
version:            0.1.0.0
author:             Samuel Pullely
maintainer:         pullelys@student.ethz.ch
extra-source-files: CHANGELOG.md

library
    exposed-modules:  AbstractionPatterns
    build-depends:    base ^>=4.14.3.0, containers
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall
